<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name" translatable="false">James DSP</string>
  <string name="headset_title">Headset</string>
  <string name="speaker_title">Speaker</string>
  <string name="notification_channel_name">@string/app_name</string>

  <string name="bluetooth_title">Bluetooth</string>
  <string name="usb_title">USB/Dock</string>
  <string name="pref_unavailable">Functionality is not available on your device</string>
  <string name="pref_dsp_title">Master switch / Output control</string>
  <string name="pref_dsp_summary_on">Master audio is enabled</string>
  <string name="pref_dsp_summary_off">Master audio is disabled</string>
  <string name="pref_dsp_enable">Master switch</string>
  <string name="dspcrashed">DSP module crashed</string>
  <string name="dspneedreboot">Reboot is required for using DSP</string>
  <string name="pref_compression_title">Dynamic range compression</string>
  <string name="pref_compression_summary_on">Compression is enabled</string>
  <string name="pref_compression_summary_off">Compression is disabled</string>
  <string name="pref_compression_enable">Enable Compression</string>
  <string name="dialog_pregain">Pre-gain</string>
  <string name="dialog_threshold">Threshold [Int:-80 &#8211; 0 dB]</string>
  <string name="dialog_knee">Knee [Int:0 &#8211; 40 dB]</string>
  <string name="dialog_ratio">Ratio [Int:-20 &#8211; 20]</string>
  <string name="dialog_attack">Attack [Real:&gt;0 &#8211; 1]</string>
  <string name="dialog_release">Release [Real:&gt;0 &#8211; 1]</string>
  <string name="pref_effect_title">Select effect strength</string>
  <string name="dialog_filtertype">Filter type</string>
  <string name="pref_effect_freq_title">Cutoff frequency [Int:30 &#8211; 300]Hz</string>
  <string name="dialog_effect">Effect strength</string>
  <string name="pref_equalizer_title">Mixed Equalizer</string>
  <string name="pref_equalizer_summary_on">Hybrid Equalizer is enabled</string>
  <string name="pref_equalizer_summary_off">Hybrid Equalizer is disabled</string>
  <string name="pref_equalizer_enable">Enable</string>
  <string name="pref_equalizer_preset_title">Select preset</string>
  <string name="pref_bassboost_title">Bass boost</string>
  <string name="pref_bassboost_summary_on">Bass boost is enabled</string>
  <string name="pref_bassboost_summary_off">Bass boost is disabled</string>
  <string name="pref_bassboost_enable">Enable Bass boost</string>
  <string name="preferredlpf">Insufficient orders!\n4096 taps low pass filter is preferred</string>
  <string name="pref_headset_virtual_title">Virtual room effect</string>
  <string name="pref_headset_virtual_summary_on">Virtual room effect is enabled</string>
  <string name="pref_headset_virtual_summary_off">Virtual room effect is disabled</string>
  <string name="pref_headset_virtual_enable">Enable Reverberation</string>
  <string name="pref_room_title">Select room type(Progenitor2)</string>
  <string name="dialog_room">Room type</string>
  <string name="dialog_mode">Mode</string>
  <string name="dialog_roomsize">Room size [Int:5 &#8211; 300]</string>
  <string name="dialog_reverbtime">Sustain [Int:5 &#8211; 300]</string>
  <string name="dialog_damping">Damping [Int:1 &#8211; 100]%</string>
  <string name="dialog_inbandwidth">HF [Int:1 &#8211; 60]</string>
  <string name="hfcomponents">(High frequency components)</string>
  <string name="dialog_earlyverb">Early level [Int:1 &#8211; 100]</string>
  <string name="dialog_tailverb">Tail level [Int:1 &#8211; 200]</string>

  <string name="pref_convolver_title">Convolver</string>
  <string name="pref_convolver_summary_on">Convolver is enabled</string>
  <string name="pref_convolver_summary_off">Convolver is disabled</string>
  <string name="pref_convolver_enable">Convolver enable</string>
  <string name="pref_ddc_title">ViPER-DDC</string>
  <string name="pref_ddc_summary_on">ViPER-DDC is enabled</string>
  <string name="pref_ddc_summary_off">ViPER-DDC is disabled</string>
  <string name="pref_ddc_enable">Enable</string>
  <string name="dialog_sosmatrix">DDC file</string>
  <string name="text_ddc_dir_isempty">DDC directory %1$s is empty</string>
  <string name="pref_analogmodelling_title">Analog Modelling</string>
  <string name="pref_analogmodelling_summary_on">Analog Modelling is enabled</string>
  <string name="pref_analogmodelling_summary_off">Analog Modelling is disabled</string>
  <string name="pref_analogmodelling_enable">Analog Modelling enable</string>
  <string name="dialog_tubedrive">Preamp(Harmonics) [Real:→0 – 12]</string>
  <string name="dialog_tubebass">Bass [Real:&#x2192;0 &#8211; 10]</string>
  <string name="dialog_tubemid">Middle [Real:&#x2192;0 &#8211; 10]</string>
  <string name="dialog_tubetreble">Treble [Real:&#x2192;0 &#8211; 10]</string>
  <string name="dialog_offlineimpulseresponseresampler">Offline Resampler(121dB SNR 90% BW)</string>
  <string name="dialog_offlineimpulseresponseresampler_title">Select IR to resample</string>
  <string name="dialog_impulseresponse">Impulse response</string>
  <string name="dialog_convgain">IR volume[Real:&#x2192;-80.0 &#8211; 30.0]dB</string>
  <string name="dialog_quality">Quality</string>
  <string name="dialog_length">Impulse response length</string>
  <string name="text_ir_dir_isempty">IR sample directory %1$s is empty</string>
  <string name="doesntexist">Error: No IR file selected</string>
  <string name="ddcdoesntexist">Error: No DDC file selected</string>
  <string name="mono_conv">Mono</string>
  <string name="stereo_conv">Stereo</string>
  <string name="fullstereo_conv">Full Stereo</string>
  <string name="resamplerstr">Resampled to audio device sample rate:%1$d\nNew impulse response created at: %2$s</string>
  <string name="resamplererror">Please first register audio engine by enabling global effect or open a music player if using conventional mode in order to retrive sample rate from audio engine</string>
  <string name="impfilefault">Load impulse failed\nPlease choose right impulse response file!</string>
  <string name="unmatchedsamplerate">Impulse response %1$s sample rate (%2$d) is not matching with driver sample rate(%3$d)\nWill use low quality resampler to resample&#8230;\nUse Offline Resampler for higher qualtiy resampling!</string>
  <string name="convolversuccess">Impulse response %1$s loaded\nSample rate:%2$d\nChannel info:%3$s\nSamples per channel:%4$d\nSamples per channel(Truncated):%5$d\nPartition strategy:%6$d</string>
  <string name="memoryallocatefail">Cannot allocate memory for convolver</string>
  <string name="limiter_threshold">Limiter threshold [dB:-60 &#8211; -0.1]</string>
  <string name="limiter_release">Limiter release [ms:1.5 &#8211; 2000]</string>
  <string name="pref_headset_stereowide_title">Stereo widener</string>
  <string name="pref_headset_stereowide_summary_on">Stereo widener is enabled</string>
  <string name="pref_headset_stereowide_summary_off">Stereo widener is disabled</string>
  <string name="pref_headset_stereowide_enable">Enable stereo widen</string>
  <string name="dialog_stereo">Widen Level</string>
  <string name="pref_headset_bs2b_title">BS2B</string>
  <string name="pref_headset_bs2b_summary_on">BS2B is enabled</string>
  <string name="pref_headset_bs2b_summary_off">BS2B is disabled</string>
  <string name="dialog_bs2b">BS2B Preset</string>
  <string name="pref_headset_bs2b_enable">Enable BS2B</string>

  <string name="eq_preset_flat">Flat</string>
  <string name="eq_preset_custom">Custom</string>
  <string name="eq_preset_bb">Bass Boost</string>
  <string name="eq_preset_bigbb">Big Bass Boost</string>
  <string name="eq_preset_boosted">Boosted</string>
  <string name="eq_preset_boseqc35">Bose QComfort 35</string>
  <string name="eq_preset_classic">Classical</string>
  <string name="eq_preset_club">Club</string>
  <string name="eq_preset_dance">Dance</string>
  <string name="eq_preset_fullbass">Full Bass</string>
  <string name="eq_preset_fullbt">Full Bass &amp; Treble</string>
  <string name="eq_preset_fullt">Full Treble</string>
  <string name="eq_preset_headphone">Headphones</string>
  <string name="eq_preset_largehall">Large Hall</string>
  <string name="eq_preset_live">Live</string>
  <string name="eq_preset_party">Party</string>
  <string name="eq_preset_perfecteq">Perfect EQ</string>
  <string name="eq_preset_pop">Pop</string>
  <string name="eq_preset_reggae">Reggae</string>
  <string name="eq_preset_rock">Rock</string>
  <string name="eq_preset_ska">Ska</string>
  <string name="eq_preset_smallsp">Small Speakers</string>
  <string name="eq_preset_soft">Soft</string>
  <string name="eq_preset_softrock">Soft Rock</string>
  <string name="eq_preset_sonyv300">Sony MDR-V300</string>
  <string name="eq_preset_superbb">Super Bass Boost</string>
  <string name="eq_preset_techno">Techno</string>

  <string name="save_preset">Save preset</string>
  <string name="load_preset">Load preset</string>
  <string name="new_preset">New preset&#8230;</string>
  <string name="displaydevmsg">%1$s module info</string>
  <string name="removetext">Remove</string>
  <string name="displaytext">Display</string>
  <string name="globaleffect_title">Reg:%1$s</string>
  <string name="globalreg">Global(Require Direct volume disabled)</string>
  <string name="traditionalreg">Conventional</string>
  <!-- Drawer -->
  <string name="navigation_drawer_toggle">Toggle Drawer</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="navigation_toggle_drawer">Switch to Drawer</string>
  <string name="navigation_toggle_tabbed">Switch to Tabbed</string>
  <!-- IO ERROR -->
  <string name="save_error_bluetooth">"Can't save bluetooth.xml. Have you ever open Bluetooth tab?"</string>
  <string name="save_error_headset">"Can't save headset.xml. Have you ever open Headset tab?"</string>
  <string name="save_error_speaker">"Can't save speaker.xml. Have you ever open Speaker tab?"</string>
  <string name="load_error_bluetooth">Load bluetooth.xml fail. File not found or permission denied</string>
  <string name="load_error_headset">Load headset.xml fail. File not found or permission denied</string>
  <string name="load_error_speaker">Load speaker.xml fail. File not found or permission denied</string>
  <string name="warn_null">File name must NOT be EMPTY, or load fail upon next preset load</string>
  <string name="help_title">Help</string>
  <string name="help_text">
    <b>Credit:</b>\n\n
    GUI Author: Antti S. Lankila \n
  </string>
    <string name="advanced_options">Advanced Options</string>
  <string name="notification_string">JamesDSP active</string>
</resources>
