<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_dsp_title">
    <CheckBoxPreference
        android:key="dsp.masterswitch.enable"
        android:summaryOn="@string/pref_dsp_summary_on"
        android:summaryOff="@string/pref_dsp_summary_off"
        android:disableDependentsState="false"
        android:title="@string/pref_dsp_enable" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_compression_title">
    <CheckBoxPreference
        android:key="dsp.compression.enable"
        android:summaryOn="@string/pref_compression_summary_on"
        android:summaryOff="@string/pref_compression_summary_off"
        android:disableDependentsState="false"
        android:title="@string/pref_compression_enable" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_bassboost_title">
    <CheckBoxPreference
        android:disableDependentsState="false"
        android:key="dsp.bass.enable"
        android:summaryOn="@string/pref_bassboost_summary_on"
        android:summaryOff="@string/pref_bassboost_summary_off"
        android:title="@string/pref_bassboost_enable" />

    <james.dsp.preference.SummariedListPreference
        android:entries="@array/bassboost_modes"
        android:dialogTitle="@string/dialog_effect"
        android:key="dsp.bass.mode"
        android:defaultValue="600"
        android:title="@string/pref_effect_title"
        android:entryValues="@array/bassboost_modes_values" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_headset_virtual_title">
    <CheckBoxPreference
        android:title="@string/pref_headset_virtual_enable"
        android:key="dsp.headphone.enable"
        android:summaryOn="@string/pref_headset_virtual_summary_on"
        android:summaryOff="@string/pref_headset_virtual_summary_off" />

    <james.dsp.preference.SummariedListPreference
        android:title="@string/pref_room_title"
        android:key="dsp.headphone.preset"
        android:dialogTitle="@string/dialog_reverbtime"
        android:entries="@array/headphone_preset"
        android:entryValues="@array/headphone_preset_values"
        android:defaultValue="8"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_equalizer_title">
    <CheckBoxPreference
        android:disableDependentsState="false"
        android:key="dsp.tone.enable"
        android:summaryOn="@string/pref_equalizer_summary_on"
        android:summaryOff="@string/pref_equalizer_summary_off"
        android:title="@string/pref_equalizer_enable" />
    <james.dsp.preference.SummariedListPreference
        android:entries="@array/equalizer_preset_modes"
        android:dialogTitle="@string/pref_equalizer_preset_title"
        android:key="dsp.tone.eq"
        android:defaultValue="0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0"
        android:title="@string/pref_equalizer_preset_title"
        android:entryValues="@array/equalizer_preset_values" />
    <james.dsp.preference.EqualizerPreference android:key="dsp.tone.eq.custom" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_convolver_title"
      android:key="dsp.convolver">
    <CheckBoxPreference
        android:key="dsp.convolver.enable"
        android:disableDependentsState="false"
        android:summaryOn="@string/pref_convolver_summary_on"
        android:summaryOff="@string/pref_convolver_summary_off"
        android:title="@string/pref_convolver_enable" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_ddc_title" android:key="dsp.ddc">
    <CheckBoxPreference
        android:key="dsp.ddc.enable"
        android:disableDependentsState="false"
        android:summaryOn="@string/pref_ddc_summary_on"
        android:summaryOff="@string/pref_ddc_summary_off"
        android:title="@string/pref_ddc_enable" />
    <james.dsp.preference.SummariedListPreferenceDDC
        android:title="@string/dialog_sosmatrix"
        android:key="dsp.ddc.files"
        android:defaultValue=""
        android:dialogTitle="@string/dialog_sosmatrix" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_analogmodelling_title"
      android:key="dsp.analogmodelling">
    <CheckBoxPreference
        android:key="dsp.analogmodelling.enable"
        android:disableDependentsState="false"
        android:summaryOn="@string/pref_analogmodelling_summary_on"
        android:summaryOff="@string/pref_analogmodelling_summary_off"
        android:title="@string/pref_analogmodelling_enable" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_headset_stereowide_title">
    <CheckBoxPreference
        android:key="dsp.stereowide.enable"
        android:disableDependentsState="false"
        android:summaryOn="@string/pref_headset_stereowide_summary_on"
        android:summaryOff="@string/pref_headset_stereowide_summary_off"
        android:title="@string/pref_headset_stereowide_enable" />
    <james.dsp.preference.SummariedListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/dialog_stereo"
        android:entries="@array/stereowide_modes"
        android:entryValues="@array/stereowide_values"
        android:title="@string/dialog_stereo"
        android:key="dsp.stereowide.mode" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_headset_bs2b_title">
    <CheckBoxPreference
        android:key="dsp.bs2b.enable"
        android:disableDependentsState="false"
        android:summaryOn="@string/pref_headset_bs2b_summary_on"
        android:summaryOff="@string/pref_headset_bs2b_summary_off"
        android:title="@string/pref_headset_bs2b_enable" />
    <james.dsp.preference.SummariedListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/dialog_bs2b"
        android:entries="@array/bs2b_modes"
        android:entryValues="@array/bs2b_values"
        android:title="@string/dialog_bs2b"
        android:key="dsp.bs2b.mode" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/advanced_options">
    <Preference android:title="@string/advanced_options"
        android:key="advanced.options">
    </Preference>
  </PreferenceCategory>
</PreferenceScreen>